--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxt/content": "^1.15.0",
     "@tailwindcss/typography": "^0.4.1",
+    "@vueuse/core": "^6.8.0",
     "cross-env": "^5.2.0",
     "netlify-identity-widget": "^1.9.2",
     "nuxt": "^2.0.0",
