--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -1,11 +1,28 @@
 todos: |-
-  # DOING
+  #REMARKS
+  - Heb column eens uitgevuld in de breedte (justify)
 
+  #DOING
+  - Load more on scroll when articles are filtered on tag
 
+  #TODO
+  - Hamburger menu better design (check yannick)
+  - Fix gradient issue safari
+  - Naakt in bad (links)
+    - even breed als column
+  - Alle columns
+    - pijltjes toevoegen voor navigatie links/rechts
+    - 5 in beeld op een ipad
+  - pagina tags
+      - lettertype “zoeken”, “geef een zoekterm in”, hoofdletter, tags: lichtere variant
+  - filter tags
+    - lettertype van de tag klopt niet
 
-  # TODO
+  #OPTIM
+  - Use Grid, so player can move to any position (now using resizeobserver)
+  - Move out css of player (in nuxt.config head), in favor of own css / tailwind
+  - Change icons (play and pause) on hover to hover:fill etc"
 
-  * Test todo\
-    Met meer uitleg
-  * Test andere todo\
-    Nog enzo
+  #QUESTIONS
+  - Two nav buttons in diff places for mobile?
+  - Better icon for hamburger
