--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -1,18 +1,169 @@
-todos: |-
+todos: >-
   ## REMARKS
+
 
   ## DOING
 
+
   ## TODO
 
-  * Hamburger menu better design (check yannick)
-  * Fix gradient issue safari
-  * test
+
+
+
+  **Desktop**
+
+
+  *Algemeen*
+
+
+  * Favicon aanpassen (ik stuur u een dikke & dunne N door, zie maar wat beste past)
+
+
+  *Logo Naakt in bad*
+
+
+  * 5% kleiner zetten
+
+  * stuk van afgesneden bovenaan (door witte band denk ik)
+
+  * hover: mag onderlijnd worden ipv switch naar outlines. Dikte onderlijn identiek aan de lijn tussen twee columns
+
+
+  *Player*
+
+
+  * staat iets te laag. Om positie te bepalen: de tekst boven de horizontale lijn (“NTS - 15/01/2018”) mag gecentreerd worden op de onderste lijn van de album art
+
+  * Play knop iets groter (25%), pauze knop zelfde grootte als play
+
+  * grootte tekst (“NTS - 15/01/2018” + tijdsaanduiding) identiek aan tekstgrootte tags in columns
+
+
+  *Home*
+
+
+  * volgorde buttons mag aangepast worden: Ontdek - Over - Tags
+
+  * naam artiest + release + label: 20% kleiner
+
+  * tags: 10% kleiner
+
+
+  *Alle columns*
+
+
+  * bovenste lijn van footer staat wat te dicht bij player (footer wat lager?)
+
+  * links + rechts laten stoppen waar de denkbeeldige lijnen van de homepage zijn
+
+  * evenredig verdelen over de beschikbare breedte
+
+  * album covers even groot als in de column
+
+  * naam artiest + release + label + tags: exact dezelfde grootte + interlinie als in columns
+
+
+  *Over*
+
+
+  * tekst (waar op home de columns staan) wat meer naar links laten beginnen (komt niet overeen met de kolom van de columns)
+
+
+  *Tags*
+
+
+  * Indien mogelijk, mogen op desktop wel 4 kolommen tags naast elkaar staan (ipv 3 op mobiel)
+
+  * Hoofdletters 15 à 20% kleiner
+
+  * Tags zelf: 30% minder interlinie
+
+
+  *Zoeken*
+
+
+  * tekst “zoeken”: mag weg (alles wat naar boven, zodat de lijn van het zoekvak uitgelijnd is op het midden van logo NIB)
+
+  * naam artiest + release: 30% groter
+
+
+  *Zoeken (indien zoekresultaten weergegeven worden)*
+
+
+  * tekst “geen artikels gevonden in zelfde fontgrootte als zoekterm zelf
+
+  * niets laten verschijnen als er geen resultaat is
+
+  * indien wel resultaat: mogelijkheid om tekst te previewen (zin waar zoekwoord instaat)?
+
+
+  *Ontdek*
+
+
+  * naam mag wijzigen naar “een gok” (SVG stuur ik door)
+
+  * lijkt nog niet te werken?
+
+  * ‘Ontdek’ (button) in kleur zetten als je op de pagina in kwestie bent
+
+
+
+
+
+
+
+
+  **Mobiel**
+
+
+  *Algemeen*
+
+
+  * 30% minder padding voorzien links & rechts
+
+  * Logo naakt in bad mag zelfde grootte behouden, maar hamburger kan zo iets meer naar rechts
+
+  * Het lijkt nu nog niet zo te zijn dat logo + hamburger verschijnen als ge naar boven scrollt?
+
+
+  *Hamburger*
+
+
+  * toch in midden van witruimte uitlijnen, op midden van logo naakt in bad
+
+
+  *Player*
+
+
+  * tekst: 20% groter
+
+  * bol: 25% groter
+
+  * geen outlines gebruiken op mobiel (hover state hoeft niet duidelijk te zijn)
+
+
+  *Home*
+
+
+  *
+
+
+
+
+
+
+
+
+
 
   ## OPTIM
 
+
   * Use Grid, so player can move to any position (now using resizeobserver)
+
   * Move out css of player (in nuxt.config head), in favor of own css / tailwind
+
   * Change icons (play and pause) on hover to hover:fill etc"
+
 
   ## QUESTIONS
