Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -145,7 +145,39 @@ todos: >-
   *Home*
 
 
-  *
+  * Tags: hoeven niet zo vroeg te stoppen, laat maar doorlopen tot einde rechterkolom
+
+
+  *Menu*
+
+
+  * ’Tekst: +20% groter en t zou toch echt goed zijn als de tekst hier in bold kan staan. Indien niet mogelijk: SVG’s van maken?
+
+  * Volgorde buttons mag aangepast worden: Ontdek - Over - Tags
+
+
+  *Tags*
+
+
+  * Wat witruimte voorzien onderaan pagina, zodat laatste tags niet onder player vallen en er wat ademruimte is
+
+  * Hoofdletters + “zoek”: idem tekst in bold . Indien niet mogelijk: SVG’s van maken? 
+
+
+  *Ontdek*
+
+
+  * naam mag wijzigen naar “een gok” (SVG stuur ik door)
+
+
+  *Indien filter (= tag) geselecteerd*
+
+
+  * Hoogte wit vak: 40% kleiner
+
+  * Tekstgroote tag: even groot als grootte van de tekst in een column
+
+  * Kruis: even groot als de R van “wis filteR”
 
 
 
