--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -97,4 +97,7 @@ todos: >-
 
 
   * Kruis: qua hoogte in midden uitgelijnd op woord "wis filter"
+  -> TODO: Specifically target Safari
 
+
+- Lijn onderaan op mobile safari pg tags
