--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -5,20 +5,26 @@ todos: >-
   **Desktop**
 
 
+  *Algemeen*
+
+
+  * Favicon aanpassen
+
+  * Logo NIB + player verdwijnen bij scroll
+
+  * Een gok: telkens terugbrengen naar begin bovenste column (schermpositie blijft nu waar je ervoor was)
+
+
   *Alle columns*
 
 
   * **evenredig verdelen over de beschikbare breedte** Dit is nogal scherm breedte gevoelig, denk niet dat er een propere manier is om dit te doen. Te bespreken. ***OK, we kunnen hier eens over chatten anders?***
 
 
-
-
   *Zoeken (indien zoekresultaten weergegeven worden)*
 
 
   * **indien wel resultaat: mogelijkheid om tekst te previewen (zin waar zoekwoord instaat)?**  Voor ik hieraan begin, want wel wat werk: hoe zie je dat? Want nu reageert ie meteen als ik een letter intyp. Dus met andere woorden: als ik de "n" intyp, dan gaat ie zo goed als alles artikels en letters terug geven. Misschien vanaf een x aantal letters? Maar is dat nog het gedrag dat je wil? Want wat bijvoorbeeld met "dj"? etc etc :) Wat mij betreft hoeft er niet meteen gereageerd te worden. ***Ik zou wel liefst preview tekst hebben, omdat dat context geeft. Wat mij betreft dus goed vanaf een aantal letters, bvb 2?***
-
-
 
 
   **Mobiel**
