--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -21,10 +21,20 @@ todos: >-
   * **evenredig verdelen over de beschikbare breedte** Dit is nogal scherm breedte gevoelig, denk niet dat er een propere manier is om dit te doen. Te bespreken. ***OK, we kunnen hier eens over chatten anders?***
 
 
+  *Tags* 
+
+
+  * witruimte tussen kolommen iets groter
+
+  * alfabetisch rangschikken
+
+
   *Zoeken (indien zoekresultaten weergegeven worden)*
 
 
   * **indien wel resultaat: mogelijkheid om tekst te previewen (zin waar zoekwoord instaat)?**  Voor ik hieraan begin, want wel wat werk: hoe zie je dat? Want nu reageert ie meteen als ik een letter intyp. Dus met andere woorden: als ik de "n" intyp, dan gaat ie zo goed als alles artikels en letters terug geven. Misschien vanaf een x aantal letters? Maar is dat nog het gedrag dat je wil? Want wat bijvoorbeeld met "dj"? etc etc :) Wat mij betreft hoeft er niet meteen gereageerd te worden. ***Ik zou wel liefst preview tekst hebben, omdat dat context geeft. Wat mij betreft dus goed vanaf een aantal letters, bvb 2?***
+
+  * klik op zoekresultaat leidt altijd naar dezelfde (bovenste) column
 
 
   **Mobiel**
