Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -12,9 +12,11 @@ todos: >-
 
   * Logo NIB + player verdwijnen bij scroll
 
+  * click op logo NIB: altijd naar home met meest recent geuploade column bovenaan
+
   * Een gok: telkens terugbrengen naar het begin van de bovenste (= meest recent geuploade) column (de schermpositie blijft nu waar je ervoor was, bvb ergens in een scroll in het midden)
 
-  * click op logo NIB: altijd naar home met meest recent geuploade column bovenaan
+  * Bij aanklikken tag op home wordt filter ingeschakeld, maar eronder verschijnen nog steeds alle andere columns (ook die met een andere tag)
 
   * Columns zo laten verschijnen dat de recentst geuploade column bovenaan verschijnt. (De nu reeds aanwezige columns mogen wel blijven staan in onderstaande volgorde, van bovenste naar onderste)
 
