Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -18,6 +18,8 @@ todos: >-
 
   * Bij aanklikken tag op home wordt filter ingeschakeld, maar eronder verschijnen nog steeds alle andere columns (ook die met een andere tag)
 
+  * Cover art lijkt samengedrukt op home
+
   * Columns zo laten verschijnen dat de recentst geuploade column bovenaan verschijnt. (De nu reeds aanwezige columns mogen wel blijven staan in onderstaande volgorde, van bovenste naar onderste)
 
     * Cindy Lee
