--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -8,14 +8,35 @@ todos: >-
   * favicon veranderen
 
 
-
-
   **Home**
 
 
   * de columns staan omgekeerd, kunnen ze in deze volgorde staan:
 
-  *
+
+  1. Cindy Lee (bovenste)
+
+  2. Roger 3000
+
+  3. Don Cherry
+
+  4. Henning
+
+  5. Ashtar Lavanda
+
+  6. Nautic
+
+  7. Merope
+
+  8. Dr Octagon
+
+  9. Brannten Schnure
+
+  10. Ben Bondy
+
+  11. Patrick Shiroishi
+
+  12. José Mauro (onderste)
 
 
 
