started doing ipad View

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -5,13 +5,10 @@ todos: >-
 
   ### ***Mobiel***
 
-  **Menu**
-
-
-
 
 
   **Tags**
 
 
   * één van de tags is onderlijnd, mag gewoon zoals de rest staan
+-> Dit lijkt een iOS bug, moet ik onderzoeken.
